--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ log = "0.4.25"
 tokio-test = "0.4"
 pretty_assertions = "1.4"
 async-stream = "0.3"
+env_logger = "0.11"
 
 [[example]]
 name = "websocket_client"
